# poly-lithic

./: .gitignore  Dockerfile  LICENSE  Makefile  analyze_plugin_registry.py  build-and-push-docker-image.sh  pyproject.toml  readme.md  requirements.txt
.github/workflows/: docker-build.yml  docs.yml  main.yml  test-310.yml  test-311.yml  test-312.yml  test-313.yml  test-39.yml  test-python-versions.yml
docs/source/: conf.py  config.rst  interfaces.rst
docs/source/api/: poly_lithic.src.interfaces.fastapi_interface.rst  poly_lithic.src.interfaces.p4p_alarm_constants.rst  poly_lithic.src.interfaces.p4p_alarm_helpers.rst  poly_lithic.src.utils.config_updater.rst  poly_lithic.src.utils.model_introspector.rst  poly_lithic.src.utils.plugin_generator.rst  poly_lithic.src.utils.plugin_registry.rst  poly_lithic.src.utils.project_generator.rst  poly_lithic.src.utils.rst
examples/base/: simple_model_local.ipynb  simple_model_mlflow.ipynb
examples/base/local/: deployment_config.yaml  deployment_config_fastapi.yaml  deployment_config_fastapi_array_waveform.yaml  deployment_config_p4p_alarm.yaml  model_definition.py  model_definition_alarm_override.py  model_definition_waveform_array.py
examples/base/mlflow_model/: k2eg_config.yaml
examples/lume-model/: lume-model-mlflow.ipynb
poly_lithic/: __init__.py  pre_install.py
poly_lithic/scripts/: main.py
poly_lithic/src/: cli.py
poly_lithic/src/config/: config_object.py  parser.py
poly_lithic/src/interfaces/: BaseInterface.py  __init__.py  fastapi_interface.py  k2eg_interface.py  k2simframe_interface.py  p4p_alarm_constants.py  p4p_alarm_helpers.py  p4p_interface.py
poly_lithic/src/model_utils/: LocalModelGetter.py  MlflowModelGetter.py  __init__.py
poly_lithic/src/transformers/: BaseTransformers.py  CompoundTransformer.py  __init__.py
poly_lithic/src/utils/: builder.py  config_updater.py  messaging.py  model_introspector.py  plugin_generator.py  plugin_registry.py  project_generator.py
poly_lithic/templates/deployment/: README.md.j2  deployment_config.yaml.j2  env.json.j2  model_definition.py.j2
poly_lithic/templates/deployment/docker/: Dockerfile.j2  docker_compose.yml.j2
poly_lithic/templates/deployment/k8s/: deployment.yaml.j2  service.yaml.j2
poly_lithic/templates/plugin/: README.md  README.md.j2  __init__.py.j2  gitignore.j2  plugins.py.j2  pyproject.toml.j2  test_deployment.yaml.j2  test_plugins.py.j2
test_plugin/: README.md  pyproject.toml
test_plugin/test_plugin/: __init__.py  plugins.py
test_plugin/tests/: test_plugins.py
tests/: mailbox.py  profile_get_many.py  pv_kafka_simframe.yaml  pv_mapping_local.yaml  test_builder.py  test_config_parser.py  test_configs.py  test_fastapi_http.py  test_fastapi_interface.py  test_file_intefrace.py  test_interfaceobserver.py  test_k2simframe.py  test_messaging.py  test_messaging_integration.py  test_model_getter.py  test_p4p.py  test_p4p_alarm_helpers.py  test_p4p_server.py  test_plugin_integration.py  test_plugin_registry.py  test_project_generator.py  test_ready_model_generator.py  test_transformers.py
tests/model/: kafka2simframe_model.py
