[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_plugin"
version = "0.1.0"
description = "A poly_lithic plugin package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "", email = "example@email.com"},
]
dependencies = [
    "poly-lithic>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Plugin entry points - uncomment the ones you need
[project.entry-points."poly_lithic.interfaces"]
test_plugin_interface = "test_plugin.plugins:CustomInterface"

[project.entry-points."poly_lithic.transformers"]
test_plugin_transformer = "test_plugin.plugins:CustomTransformer"

[project.entry-points."poly_lithic.model_getters"]
test_plugin_model_getter = "test_plugin.plugins:CustomModelGetter"

[tool.setuptools]
packages = ["test_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]